--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   #footer {
     margin-top: auto;
-    padding: 30px;
+    padding: 50px;
     text-align: center;
     font-size: 0.9em;
     color: #fff;
@@ -76,8 +76,8 @@
     gap: 15px;
     width: 100%;
     max-width: 400px;
-    justify-content: center; /* centraliza horizontalmente as células */
-  justify-items: center;   /* centraliza o conteúdo (as .circle) */
+    justify-content: center;
+    justify-items: center;
   }
 
   .circle {
@@ -378,3 +378,4 @@
 </body>
 <footer id="footer">© 2025 Viniciusav</footer>
 </html>
+
