--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     justify-content: flex-start;
     min-height: 100vh;
     padding: 20px;
-    overflow: hidden;
+    /*overflow: hidden;*/
   }
 
   #footer {
@@ -378,4 +378,5 @@
 </body>
 <footer id="footer">© 2025 Viniciusav</footer>
 </html>
+
 
