--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    min-height: 100vh;
+    min-height: 98vh;
     padding: 20px;
     /*overflow: hidden;*/
   }
 
   #footer {
     margin-top: auto;
-    padding: 50px;
+    /*padding: 50px;*/
+    min-height: 2vh;
     text-align: center;
     font-size: 0.9em;
     color: #fff;
@@ -378,5 +379,6 @@
 </body>
 <footer id="footer">© 2025 Viniciusav</footer>
 </html>
+
 
 
