--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    min-height: 100vh;
+    min-height: 100dvh;
     padding: 20px;
     /*overflow: hidden;*/
   }
@@ -380,6 +380,7 @@
   <footer id="footer">© 2025 Viniciusav</footer>
 </body>
 </html>
+
 
 
 
