--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Jogo da Sequência</title>
 <style>
+  html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
   body {
     font-family: Arial, sans-serif;
     background: linear-gradient(135deg, #111, #333);
@@ -380,6 +385,7 @@
   <footer id="footer">© 2025 Viniciusav</footer>
 </body>
 </html>
+
 
 
 
