--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     justify-content: flex-start;
     min-height: 100dvh;
     padding: 20px;
-    /*overflow: hidden;*/
+    overflow-x: hidden;
   }
 
   #footer {
@@ -385,6 +385,7 @@
   <footer id="footer">© 2025 Viniciusav</footer>
 </body>
 </html>
+
 
 
 
