--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    min-height: 98dvh;
-    padding: 20px;
+    min-height: 100dvh;
+    /*padding: 20px;*/
     overflow-x: hidden;
   }
 
@@ -393,6 +393,7 @@
   <footer id="footer">© 2025 Viniciusav</footer>
 </body>
 </html>
+
 
 
 
